--- a/VUE/v-else.html
+++ b/VUE/v-else.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="app">
+        <!--se a informação for verdadeira/true essa menssagem será exibida-->
         <span v-if="inUnderAge">Você precisa ser maior de 18 anos</span>
+        <!--se a informação não for verdadeira/false essa menssagem será exibida-->
         <template v-else>
             <span>Veja os itens</span>
         <ul>
